<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.s10r.photosearch.searcher.SearchSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_type"
        android:id="@+id/tvImgType"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImgType"
        android:layout_below="@+id/tvImgType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog"
        android:entries="@array/image_type"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_size"
        android:id="@+id/tvImgSize"
        android:layout_below="@+id/spImgType"
        android:layout_alignParentLeft="true"
        android:layout_alignEnd="@+id/tvImgType" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sImgSize"
        android:layout_below="@+id/tvImgSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:entries="@array/image_size"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_color"
        android:id="@+id/tvImgColor"
        android:layout_below="@+id/sImgSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sImgColor"
        android:layout_below="@+id/tvImgColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:entries="@array/image_colors"
        android:paddingBottom="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_below="@+id/sImgColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/site_search"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:inputType="textUri" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:id="@+id/btnApply"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="applySettings" />

</RelativeLayout>
